# reality-rs

./: .gitignore  .yarnrc.yml  package.json  readme.md
crates/reality/: .gitignore  Cargo.toml
crates/reality-yew/: Cargo.toml
crates/reality-yew/src/: lib.rs  rendered.rs
crates/reality/src/: error.rs  expect.rs  lib.rs
crates/reality/src/screen/: mod.rs  sys.rs
crates/reality/src/searches/: match_options.rs  mod.rs  text.rs  wait_options.rs
crates/reality/src/sys/: mod.rs  querier.rs  screen.rs
