[package]
name = "reality-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
reality = { path = "../reality", version = "0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
